============================
Release date: TBA

* Removed internal functions ``infer_numpy_member``, ``name_looks_like_numpy_member``, and
  ``attribute_looks_like_numpy_member`` from ``astroid.brain.brain_numpy_utils``.

* Constants now have a parent of ``nodes.SYNTHETIC_ROOT``.

* Fix crashes with large positive and negative list multipliers.

  Closes #2521
  Closes #2523

* Fix crash when typing._alias() call is missing arguments.

  Closes #2513


What's New in astroid 3.3.6?
============================
Release date: TBA

* Fix precedence of `path` arg in `modpath_from_file_with_callback` to be higher than `sys.path`


What's New in astroid 3.3.5?
============================
Release date: 2024-10-04

* Control setting local nodes outside of the supposed local's constructor.

  Closes #1490

* Fix Python 3.13 compatibility re: `collections.abc`

  Closes pylint-dev/pylint#10000


What's New in astroid 3.3.4?
============================
Release date: 2024-09-23

* Fix regression with f-string inference.

  Closes pylint-dev/pylint#9947

* Fix bug with ``manager.clear_cache()`` not fully clearing cache.

  Refs https://github.com/pylint-dev/pylint/pull/9932#issuecomment-2364985551

* Fix a crash from inferring empty format specs.

  Closes pylint-dev/pylint#9945


What's New in astroid 3.3.3?
============================
Release date: 2024-09-20

* Fix inference regression with property setters.

  Closes pylint-dev/pylint#9811

* Add annotation-only instance attributes to attrs classes to fix `no-member` false positives.

  Closes #2514


What's New in astroid 3.3.2?
============================
Release date: 2024-08-11

* Restore support for soft-deprecated members of the ``typing`` module with python 3.13.

  Refs pylint-dev/pylint#9852


What's New in astroid 3.3.1?
============================
Release date: 2024-08-06

* Fix a crash introduced in 3.3.0 involving invalid format strings.

  Closes #2492


What's New in astroid 3.3.0?